@@ -81,6 +81,7 @@ class LengowOrder extends Order
     public const TYPE_EXPRESS = 'is_express';
     public const TYPE_BUSINESS = 'is_business';
     public const TYPE_DELIVERED_BY_MARKETPLACE = 'is_delivered_by_marketplace';
+    public const FIELD_B2B_VALUE = 'B2B';
 
     /**
      * @const number of tries to sync order num
@@ -1175,7 +1176,32 @@ class LengowOrder extends Order
      */
     public function isBusiness()
     {
-        return isset($this->lengowOrderTypes[self::TYPE_BUSINESS]);
+        if (isset($this->lengowOrderTypes[self::TYPE_BUSINESS])) {
+            return true;
+        }
+        $extraData = json_decode($this->lengowExtra, true);
+        $paymentInfo = $extraData['payments'][0] ?? [];
+        $billingInfo = $extraData['billing_address'] ?? [];
+
+        if (isset($paymentInfo['payment_terms'])) {
+            $fiscalNumber = $paymentInfo['payment_terms']['fiscalnb'] ?? '';
+            $vatNumber   = $paymentInfo['payment_terms']['vat_number'] ?? '';
+            $siretNumber = $paymentInfo['payment_terms']['siret_number'] ?? '';
+
+            if (!empty($fiscalNumber)
+                    || !empty($vatNumber)
+                    || !empty($siretNumber)) {
+                $this->lengowOrderTypes[self::TYPE_BUSINESS] = self::FIELD_B2B_VALUE;
+                return true;
+            }
+        }
+        if (!empty($billingInfo['vat_number'])
+            && !empty($billingInfo['company'])) {
+            $this->lengowOrderTypes[self::TYPE_BUSINESS] = self::FIELD_B2B_VALUE;
+            return true;
+        }
+
+        return false;
     }
 
     /**
@@ -1228,3 +1254,4 @@ class LengowOrder extends Order
         return (int) $row['total'];
     }
 }
+
